# yoshicar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  parts.txt  yoshicar.rosinstall
config/: usb_cam.yaml
doc/: ideas.txt  parts.txt  power consumption  roadmap.txt
launch/: measure_speed.launch  pwm.xml  remote_control_receiver.launch  remote_control_sender.launch  usb_cam.xml  yoshicar.launch
yoshicar/: package.xml
yoshicar/config/: common.yaml  remote_control.yaml
yoshicar/config/sensors/: imu.yaml  lidar.yaml
yoshicar/launch/: lidar.xml  measure_velocity.launch  pwm.xml  radius2angle.launch  static_tf.xml  web_video_server.launch  yoshicar.launch
yoshicar/launch/ackermann2actuator/: measure_turning_radius.launch  measurements2param.launch  radius2angle.launch
yoshicar/launch/remote_control/: remote_control_receiver.launch
yoshicar/launch/sensors/: imu.launch  imu.xml  lidar.xml  view_imu.launch  view_lidar.launch
yoshicar_base_controller/: CMakeLists.txt  package.xml
yoshicar_base_controller/config/: base_controller.yaml  hardware_interface.yaml
yoshicar_base_controller/include/: ImuVelocityEstimator.h  MotorStateMachine.h  YoshicarHardwareInterface.h
yoshicar_base_controller/include/yoshicar_base_controller/: ActuatorConfig.h  FusionVelocityEstimator.h  ImuVelocityEstimator.h  MotorStateMachine.h  YoshicarHardwareInterface.h
yoshicar_base_controller/launch/: base_controller.xml  pwm.xml
yoshicar_base_controller/src/: ActuatorConfig.cpp  FusionVelocityEstimator.cpp  ImuVelocityEstimator.cpp  MotorStateMachine.cpp  YoshicarHardwareInterface.cpp  YoshicarHardwareInterfaceNode.cpp  pwm_node.py
yoshicar_msgs/: CMakeLists.txt  package.xml
yoshicar_msgs/msg/: VelocityEstimate.msg
(+32 files in other folders)
