<?xml version="1.0"?>
<package format="2">
  <name>yoshicar</name>
  <version>0.1.0</version>
  <description>The yoshicar package</description>
  <maintainer email="philipp.badenhoop@hellocodeblog.com">Philipp Badenhoop</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>yoshicar_base_controller</depend>
  <depend>usb_cam</depend>
  <depend>async_web_server_cpp</depend>
  <depend>web_video_server</depend>
  <depend>laser_filters</depend>

</package>
