<?xml version="1.0"?>
<package format="2">
  <name>yoshicar_base_controller</name>
  <version>0.1.0</version>
  <description>The yoshicar_base_controller package</description>
  <maintainer email="philipp.badenhoop@hellocodeblog.com">Philipp Badenhoop</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>ackermann_steering_controller</depend>
  <depend>std_msgs</depend>
  <depend>sens_msgs</depend>
  <depend>yoshicar_msgs</depend>
</package>
